--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <nav>
             <ul>
               <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Team</a></li>
+              <li><a href="media.html">Media</a></li>
+              <li><a href="team.html">Team</a></li>
             </ul>
           </nav>          
     </header>
