--- a/team.html
+++ b/team.html
@@ -31,17 +31,24 @@
                     </p>
                 </div>
                 <div class="member">
+                    <img src="images/team/Bonuke Samuel.png" alt="Bonuke Samuel"/>
+                    <h3>Bonuke Samuel</h3>
+                    <p>
+                        Videographer
+                    </p>
+                </div>
+                <div class="member">
                     <img src="images/team/Evance Otieno.png" alt="Evance Otieno"/>
                     <h3>Evance Otieno</h3>
                     <p>
-                        Project Manager
+                        Tourist
                     </p>
                 </div>
                 <div class="member">
                     <img src="images/team/Marleen Atieno.png" alt="Marleen Atieno"/>
                     <h3>Marleen Atieno</h3>
                     <p>
-                        Project Manager
+                        Script Writing
                     </p>
                 </div>
                 <div class="member">
@@ -55,28 +62,35 @@
                     <img src="images/team/Pritam Vekaria.png" alt="Pritam Vekaria"/>
                     <h3>Pritam Vekaria</h3>
                     <p>
-                        Project Manager
+                        Graphic Designer
                     </p>
                 </div>                
                 <div class="member">
                     <img src="images/team/Timothy Opango.png" alt="Timothy Opango"/>
                     <h3>Timothy Opango</h3>
                     <p>
-                        Project Manager
+                        Tourist
                     </p>
                 </div>
                 <div class="member">
                     <img src="images/team/Titus Kiprotich.png" alt="Titus Kiprotich"/>
                     <h3>Titus Kiprotich</h3>
                     <p>
-                        Project Manager
+                        Tourist
                     </p>
                 </div>
                 <div class="member">
                     <img src="images/team/Tonny Owino.png" alt="Tonny Owino"/>
                     <h3>Tonny Owino</h3>
                     <p>
-                        Project Manager
+                        Tourist
+                    </p>
+                </div>
+                <div class="member">
+                    <img src="images/team/Victor Kiprop.png" alt="Victor Kiprop"/>
+                    <h3>Victor Kiprop</h3>
+                    <p>
+                        Photographer
                     </p>
                 </div>
             </div>
