[chore]: Add tsavo to media

--- a/media.html
+++ b/media.html
@@ -21,7 +21,44 @@
     </header>
 
     <main>
-      
+      <section id="tsavo" class="tsavo-content">
+        <div class="intro">
+          <h3>Tsavo National Park</h3>
+          <img src="images/Tsavo/sala-gate-tsavo-park.jpg" alt="Tsavo Sala Gate">
+          <p>
+            Tsavo East National Park is a large wildlife reserve located in southeastern Kenya. It covers an area of over 13,000 square kilometers and is home to a diverse range of wildlife, including elephants, lions, leopards, giraffes, zebras, and many more. The park is known for its vast open savannah grasslands, volcanic hills, and the Galana River, which flows through the park and provides a habitat for crocodiles and hippos. Visitors can enjoy game drives, birdwatching, and guided walks, as well as visits to local communities and cultural sites. Tsavo East National Park is one of Kenya's oldest and largest national parks, and is a popular destination for both local and international tourists.
+          </p>
+        </div>
+        <div>
+          <h3>Pictorial Tour of Tsavo National Park</h3>
+        </div>
+        <div class="body">
+          <div class="grid-item-1">
+              <img src="images/Tsavo/sala-gate-tsavo-east.jpg" alt="Sala Gate Tsavo East">
+              Tsavo East National Park's gate
+          </div>      
+          <div class="grid-item-2">
+              <img src="images/Tsavo/Tsavo-East-National-lions.jpg" alt="Lions">
+              Lions taking a stroll
+          </div>         
+          <div class="grid-item-3">
+              <img src="images/Tsavo/Tsavo-East-National-buffaloes.jpg" alt="buffaloes">
+              Buffaloes in a river
+          </div>         
+          <div class="grid-item-4">
+              <img src="images/Tsavo/Tsavo-East-National-elephants.jpg" alt="elephants">
+              Elephants in a herd
+          </div>        
+          <div class="grid-item-5">
+              <img src="images/Tsavo/Tsavo-East-National-giraffe.jpg" alt="giraffe">
+              Tourists watching a Giraffe crossing the road
+          </div>         
+          <div class="grid-item-6">
+              <img src="images/Tsavo/tourists-watching-lion.jpg" alt="tourists-watching-lion">
+              Tourists watching a Lion crossing the road
+          </div>        
+        </div>
+      </section>
     </main>
 </body>
 </html>
