[chore]: Add member

--- a/team.html
+++ b/team.html
@@ -92,6 +92,13 @@
                     Photographer
                 </p>
             </div>
+            <div class="member">
+                <img src="images/team/Vladmir Nyataige.png" alt="Vladmir Nyataige"/>
+                <h3>Vladmir Nyataige</h3>
+                <p>
+                    Documentation
+                </p>
+            </div>
         </div>
     </main>
 </body>
