[chore]: Add youtube video

--- a/media.html
+++ b/media.html
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
+    <!-- YouTube API -->
+    <script src="https://www.youtube.com/iframe_api"></script>
     <title>Multimedia</title>
 </head>
 <body>
@@ -17,10 +19,28 @@
               <li><a href="#">Media</a></li>
               <li><a href="team.html">Team</a></li>
             </ul>
+            <span class="nav-item">
+              <a href="#" class="nav-link">National Parks</a>
+              <a href="#acacia" class="nav-link">Acacia trees</a>
+            </span>
           </nav>          
     </header>
 
     <main>
+      <section id="acacia" class="acacia-content">
+        <div class="body">
+          <h2>Acacia Trees Walkthrough</h2>
+          <p>
+            Welcome to this short video about acacia trees! Acacias are a group of trees and shrubs that are known for their characteristic thorns and distinctive, feathery leaves. They are found in many parts of the world, including Africa, Australia, and the Americas, and they play important roles in many ecosystems. In this video, we'll take a closer look at some of the key features and fascinating facts about these fascinating plants. So let's get started!
+          </p>
+          <div id="player">
+            <!-- First Embed -->
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/wwERXdnJeFA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+            </iframe>
+          </div>
+        </div>
+      </section>
+
       <section id="tsavo" class="tsavo-content">
         <div class="intro">
           <h3>Tsavo National Park</h3>
