[chore]: Update youtube embed

--- a/media.html
+++ b/media.html
@@ -20,7 +20,7 @@
               <li><a href="team.html">Team</a></li>
             </ul>
             <span class="nav-item">
-              <a href="#" class="nav-link">National Parks</a>
+              <a href="#tsavo" class="nav-link">Tsavo East National Park</a>
               <a href="#acacia" class="nav-link">Acacia trees</a>
             </span>
           </nav>          
