[chore]: Update introduction

--- a/media.html
+++ b/media.html
@@ -31,7 +31,7 @@
         <div class="body">
           <h2>Acacia Trees Walkthrough</h2>
           <p>
-            Welcome to this short video about acacia trees! Acacias are a group of trees and shrubs that are known for their characteristic thorns and distinctive, feathery leaves. They are found in many parts of the world, including Africa, Australia, and the Americas, and they play important roles in many ecosystems. In this video, we'll take a closer look at some of the key features and fascinating facts about these fascinating plants. So let's get started!
+            You're invited to watch this quick movie about acacia trees. Known for their unique, fluffy leaves and prominent thorns, the acacia family of plants and shrubs includes both trees and shrubs. They are widespread around the globe, particularly in Africa, Australia, and the Americas, and they are vital components of many ecosystems. We'll examine some of the distinguishing characteristics and fascinating details of these intriguing plants in further detail in this video. So let's get started!
           </p>
           <div id="player">
             <!-- First Embed -->
